deploy: c0f38958453ff865d76b6064218ef72d6e56949c

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ $(function(){ initResizable(false); });
 </div><!--header-->
 <div class="contents">
 <div class="textblock"><p><a class="anchor" id="md_README"></a></p>
-<p><a href="https://github.com/juanscelyg/roboligo/actions/workflows/main.yml"><img src="https://github.com/juanscelyg/roboligo/actions/workflows/main.yml/badge.svg?branch=main" alt="main" style="pointer-events: none;" class="inline"/></a></p>
+<p><a href="https://github.com/juanscelyg/roboligo/actions/workflows/rolling.yml"><img src="https://github.com/juanscelyg/roboligo/actions/workflows/rolling.yml/badge.svg?branch=rolling" alt="rolling" style="pointer-events: none;" class="inline"/></a> <a href="https://github.com/juanscelyg/roboligo/actions/workflows/jazzy.yml"><img src="https://github.com/juanscelyg/roboligo/actions/workflows/jazzy.yml/badge.svg?branch=jazzy" alt="jazzy" style="pointer-events: none;" class="inline"/></a></p>
 <p>Roboligo is a centralized command interface layer that bridges navigation stacks and hardware interfaces for robotic systems. It provides a unified abstraction for robot control, simplifying the complexity of managing diverse hardware implementations while maintaining compatibility with standard navigation algorithms.</p>
 <p><img src="docs/img/roboligo_0.png" alt="Roboligo" class="inline"/></p>
 <h1><a class="anchor" id="autotoc_md1"></a>
